--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -1,3 +1,24 @@
-<div id="clearance" class="password-reset">
-  <p><%= t(".description") %></p>
+<div class="row" style="margin-top: 40px;">
+  <div class="col-sm-6 col-md-6 col-md-offset-3">
+
+    <!-- Login Panel -->
+    <div class="panel panel-default">
+
+      <div class="panel-heading">
+        <h4 class="panel-title">Reset your password</h4>
+      </div>
+
+      <div class="panel-body">
+
+        <p><%= t(".description") %></p>
+
+      </div>
+
+      <div class="panel-footer">
+        <small><%= link_to "Return to Log In", login_path %></small>
+      </div>
+
+    </div>
+
+  </div>
 </div>
