--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,18 +1,51 @@
-<div id="clearance" class="password-reset">
-  <h2><%= t(".title") %></h2>
+<div class="row" style="margin-top: 40px;">
+  <div class="col-sm-6 col-md-6 col-md-offset-3">
 
-  <p><%= t(".description") %></p>
+    <!-- Login Panel -->
+    <div class="panel panel-default">
 
-  <%= form_for :password_reset,
-        url: user_password_path(@user, token: @user.confirmation_token),
-        html: { method: :put } do |form| %>
-    <div class="password-field">
-      <%= form.label :password %>
-      <%= form.password_field :password %>
+      <div class="panel-heading">
+        <h4 class="panel-title"><%= t(".title") %></h4>
+      </div>
+
+      <div class="panel-body">
+
+        <%= form_for :password_reset,
+              url: user_password_path(@user, token: @user.confirmation_token),
+              html: { method: :put } do |form| %>
+        <fieldset>
+          <div class="row">
+            <div class="col-sm-12 col-md-10 col-md-offset-1">
+              <p class="help-block"><%= t(".description") %></p>
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon"><%= icon(:user) %></span>
+                  <%= form.password_field :password, class: 'form-control', placeholder: 'New Password', autofocus: true %>
+                </div>
+              </div>
+              <div class="form-group">
+                <%= form.submit class: "btn btn-lg btn-info btn-block" %>
+              </div>
+            </div>
+          </div>
+        </fieldset>
+        <% end %>
+
+      </div>
+
+      <div class="panel-footer">
+
+        <div class="row">
+          <div class="col-sm-12 col-md-10 col-md-offset-1">
+            <div class="pull-left">
+              <small><%= link_to "Return to Log In", login_path %></small>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+
     </div>
 
-    <div class="submit-field">
-      <%= form.submit %>
-    </div>
-  <% end %>
+  </div>
 </div>
