--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-10 col-md-offset-1">
             <div class="pull-left">
-              <small><%= link_to "Return to Log In", login_path %></small>
+              <small><%= link_to "Return to Log In", sign_in_path %></small>
             </div>
             <div class="clearfix"></div>
           </div>
