--- a/app/views/passwords/create.html.erb
+++ b/app/views/passwords/create.html.erb
@@ -15,7 +15,7 @@
       </div>
 
       <div class="panel-footer">
-        <small><%= link_to "Return to Log In", login_path %></small>
+        <small><%= link_to "Return to Log In", sign_in_path %></small>
       </div>
 
     </div>
