--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -17,6 +17,9 @@
         <p class="text-right text-muted">
           <small>Made with &spades; by <a href="https://github.com/bbengfort/">@bbengfort</a></small>
         </p>
+        <p class="text-right text-muted">
+          <small><span id="footerStatus"><i class="fa fa-circle"></i></span> Kahu API</small>
+        </p>
       </div>
     </div>
   </div>
