--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,12 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
+    <div id="wrap">
+        <%= render 'layouts/header' %>
 
-    <div class="container">
-      <%= yield %>
+        <div id="content" class="container">
+          <%= yield %>
+        </div>
     </div>
 
     <%= render 'layouts/footer' %>
