--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,9 @@
 
     <div class="collapse navbar-collapse" id="navbar-tabs">
       <!-- Navbar tabs left -->
-      <ul class="nav navbar-nav navbar-left"></ul>
+      <ul class="nav navbar-nav navbar-left">
+        <li><%= link_to "Hosts", controller: 'machines' %></li>
+      </ul>
 
       <!-- Navbar dropdwon right -->
       <ul class="nav navbar-nav navbar-right">
