--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,24 @@
 <% provide(:title, "Help") %>
-<h1>Kahu Help</h1>
+
+<!-- Page Header -->
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <div class="page-header">
+      <h2 class="pull-left">Kahu Help</h2>
+      <div class="header-controls pull-right">
+      </div>
+      <div class="clearfix"></div>
+    </div>
+  </div>
+</div>
+
+<!-- Article Content -->
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+
+    <p>This page contains a list of FAQs that are quick notes for using the
+       API and the service in general. These are mostly just for me to ensure
+       that I have a scratch pad for figuring out errors in the future.</p>
+
+  </div>
+</div>
