--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,15 @@
     <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
 
+    <!-- Google Maps Javascript -->
+    <script src="//maps.google.com/maps/api/js?key=<%= Rails.application.secrets.google_maps_api %>"></script>
+    <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+
+    <!-- Asset Pipeline -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- IE9 Shim -->
     <%= render 'layouts/shim' %>
   </head>
 
