--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse" id="navbar-tabs">
       <!-- Navbar tabs left -->
       <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to "Hosts", controller: 'machines' %></li>
+        <li><%= link_to "Hosts", machines_path %></li>
       </ul>
 
       <!-- Navbar dropdwon right -->
