--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -31,6 +31,7 @@
 
     <table class="table table-striped table-bordered table-hover">
       <thead>
+        <th class="text-center">Status</th>
         <th>Hostname</th>
         <th>IP Address</th>
         <th>Domain</th>
@@ -41,6 +42,16 @@
         <% mdash = "&mdash;".html_safe %>
         <% @machines.each do |m| %>
         <tr class="clickable-row", data-href="<%= machine_path(m) %>">
+          <td class="text-center">
+            <!-- Active -->
+            <span class="text-<%= m.active ? :success : :danger %>" title="<%= m.active ? "Active" : "Inactive" %>">
+              <%= icon(:circle) %>
+            </span>
+            <!-- Health -->
+            <span class="health-<%= m.health %>" title="Health: <%= m.health.capitalize %>">
+              <%= icon(:circle) %>
+            </span>
+          </td>
           <td><%= m.hostname %></td>
           <td><%= m.ip_address.nil? ? mdash : m.ip_address %></td>
           <td><%= m.domain.empty? ? mdash : m.domain %></td>
