--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -94,7 +94,7 @@
         <li class="list-group-item">
           <strong>Last Seen:</strong>
           <span class="pull-right">
-            <%= time_ago_in_words(@machine.last_seen) %>
+            <%= time_ago_in_words(@machine.last_seen) %> ago
           </span>
         </li>
         <% end %>
