--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -171,6 +171,47 @@
       </table>
     </div>
 
+    <!-- Latencies -->
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">Connection Latencies</h4>
+      </div>
+      <table class="table table-hover">
+        <thead>
+          <th>Source</th>
+          <th>Target</th>
+          <th class="text-center">Messages</th>
+          <th class="text-center">Timeouts</th>
+          <th class="text-center">&mu;</th>
+          <th class="text-center">&sigma;</th>
+          <th class="text-center">Fastest</th>
+          <th class="text-center">Slowest</th>
+        </thead>
+        <tbody>
+          <% if @machine.latencies.count > 0 %>
+            <% @machine.latencies.order(:updated_at).each do |l| %>
+            <tr>
+              <td ><%= l.source.hostname %></td>
+              <td ><%= l.target.hostname %></td>
+              <td class="text-center"><%= l.messages %></td>
+              <td class="text-center"><%= l.timeouts %></td>
+              <td class="text-center"><%= l.mean %></td>
+              <td class="text-center"><%= l.stddev %></td>
+              <td class="text-center"><%= l.fastest %></td>
+              <td class="text-center"><%= l.slowest %></td>
+            </tr>
+            <% end %>
+          <% else %>
+            <tr>
+              <td colspan="3" class="text-center text-warning">
+                No reported latencies from <%= @machine.hostname %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+
   </div>
 </div>
 
