--- a/templates/site/overview.html
+++ b/templates/site/overview.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard.html' %}
+{% load staticfiles %}
 
 {% block breadcrumbs %}
 <!-- breadcrumbs-->
@@ -11,4 +12,33 @@
 {% endblock %}
 
 {% block dashboard %}
+  <!-- replica map-->
+  <div class="card mb-3">
+    <div class="card-header">
+      <i class="fa fa-map"></i> Geographic Replication</div>
+    <div class="card-body">
+      <div id="map" style="width: 100%; min-height: 400px;"></div>
+    </div>
+    <div class="card-footer small text-muted">GeoIP provided by MaxMind</div>
+  </div><!-- end replica map-->
+{% endblock %}
+
+{% block javascripts %}
+  {{ block.super }}
+  <!-- replica map script -->
+  <script>
+    var map = null;
+    var markers = {{ markers|safe }};
+
+    function initMap() {
+      map = new geo.Map("#map")
+      map.add_markers(markers)
+    }
+  </script>
+
+  <!-- google maps javascript -->
+  <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+  <script async defer src="//maps.google.com/maps/api/js?key={{ google_maps_api }}&callback=initMap"></script>
+  <script src="{% static 'js/geo.js' %}"
+
 {% endblock %}
