--- a/templates/site/overview.html
+++ b/templates/site/overview.html
@@ -12,12 +12,97 @@
 {% endblock %}
 
 {% block dashboard %}
+  <!-- status cards -->
+  <div class="row">
+
+    <!-- replicas under management -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-info o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-sitemap"></i>
+          </div>
+          <div class="mr-5">
+            {{ status.active }} Active
+          </div>
+        </div>
+        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fa fa-angle-right"></i>
+          </span>
+        </a> -->
+      </div>
+    </div>
+
+    <!-- active replicas -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-success o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-heartbeat"></i>
+          </div>
+          <div class="mr-5">
+            {{ status.online }} Online
+          </div>
+        </div>
+        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fa fa-angle-right"></i>
+          </span>
+        </a> -->
+      </div>
+    </div>
+
+    <!-- online replicas -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-warning o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-warning"></i>
+          </div>
+          <div class="mr-5">
+            {{ status.unresponsive }} Unresponsive
+          </div>
+        </div>
+        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fa fa-angle-right"></i>
+          </span>
+        </a> -->
+      </div>
+    </div>
+
+    <!-- offline replicas -->
+    <div class="col-xl-3 col-sm-6 mb-3">
+      <div class="card text-white bg-danger o-hidden h-100">
+        <div class="card-body">
+          <div class="card-body-icon">
+            <i class="fa fa-fw fa-medkit"></i>
+          </div>
+          <div class="mr-5">
+            {{ status.offline }} Offline
+          </div>
+        </div>
+        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+          <span class="float-left">View Details</span>
+          <span class="float-right">
+            <i class="fa fa-angle-right"></i>
+          </span>
+        </a> -->
+      </div>
+    </div>
+
+  </div><!-- end status cards -->
+
   <!-- replica map-->
   <div class="card mb-3">
     <div class="card-header">
       <i class="fa fa-map"></i> Geographic Replication</div>
     <div class="card-body">
-      <div id="map" style="width: 100%; min-height: 400px;"></div>
+      <div id="map" style="width: 100%; min-height: 450px;"></div>
     </div>
     <div class="card-footer small text-muted">GeoIP provided by MaxMind</div>
   </div><!-- end replica map-->
