--- a/templates/site/replicas.html
+++ b/templates/site/replicas.html
@@ -1,4 +1,7 @@
 {% extends 'dashboard.html' %}
+{% load humanize %}
+{% load lights %}
+{% load qs %}
 
 {% block breadcrumbs %}
 <!-- breadcrumbs-->
@@ -11,4 +14,110 @@
 {% endblock %}
 
 {% block dashboard %}
+  <div class="card mb-3">
+    <div class="card-header">
+      <i class="fa fa-database"></i> Replica Processes</div>
+    <div class="card-body">
+
+      <div class="row mb-2">
+        <div class="col-sm-12 col-md-6">
+          <div class="pull-left">
+
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="pull-right">
+            <div class="dropdown">
+              <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="filterReplicasButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-filter"></i> Filter hosts <span class="caret"></span>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                {% with params=request.GET.urlencode %}
+                <a class="dropdown-item" href="{% query_string 'active' 'true' params %}">Active Hosts</a>
+                <a class="dropdown-item" href="{% query_string 'active' 'false' params %}">Inactive Hosts</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{% url 'replicas' %}">All Hosts</a>
+                {% endwith %}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered" width="100%" cellspacing="0">
+          <thead>
+            <tr>
+              <th class="text-center">Status</th>
+              <th class="text-center">PID</th>
+              <th>Hostname</th>
+              <th>Endpoint</th>
+              <th>Location</th>
+              <th>Last Seen</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for replica in replicas %}
+            <tr>
+              <td class="text-center">
+                <!-- status light -->
+                {% active replica %}
+                <!-- health light -->
+                {% health replica %}
+              </td>
+              <td class="text-center">{{ replica.precedence }}</td>
+              <td>{{ replica.hostname }}</td>
+              <td><code>{{ replica.ip_address }}:{{ replica.port }}</code></td>
+              <td>{{ replica.location.location }}</td>
+              <td>{{ replica.last_seen|naturaltime }}</td>
+            </tr>
+            {% empty %}
+            <tr>
+              <td colspan="6">No replicas to display</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+
+      <!-- replicas pagination -->
+      <nav class="pull-right" aria-label="...">
+        <ul class="pagination">
+          <li class="page-item{% if not page_obj.has_previous %} disabled{% endif %}">
+            <a class="page-link" href="{% if page_obj.has_previous %}{% query_string 'page' page_obj.previous_page_number request.GET.urlencode %}{% else %}#{% endif %}">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a>
+          </li>
+
+          {% for page in paginator.page_range %}
+          {% if page == page_obj.number %}
+          <li class="page-item active">
+            <span class="page-link">
+              {{ page }}
+              <span class="sr-only">(current)</span>
+            </span>
+          </li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="{% query_string 'page' page request.GET.urlencode %}">{{page}}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
+
+          <li class="page-item{% if not page_obj.has_next %} disabled{% endif %}">
+            <a class="page-link" href="{% if page_obj.has_next %}{% query_string 'page' page_obj.next_page_number request.GET.urlencode %}{% else %}#{% endif %}">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+    </div>
+    <div class="card-footer small text-muted">
+      {{ paginator.count }} replicas managed
+    </div>
+  </div>
 {% endblock %}
