added links and filtering for replica health

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li class="nav-item{% if dashboard == "replicas" %} active{% endif %}" data-toggle="tooltip" data-placement="right" title="Link">
-        <a class="nav-link" href="{% url 'replicas' %}">
+        <a class="nav-link" href="{% url 'replicas' %}?active=true">
           <i class="fa fa-fw fa-sitemap"></i>
           <span class="nav-link-text">Replicas</span>
         </a>
