--- a/templates/site/overview.html
+++ b/templates/site/overview.html
@@ -26,12 +26,12 @@
             {{ status.active }} Active
           </div>
         </div>
-        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?active=true">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
           </span>
-        </a> -->
+        </a>
       </div>
     </div>
 
@@ -46,12 +46,12 @@
             {{ status.online }} Online
           </div>
         </div>
-        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=online">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
           </span>
-        </a> -->
+        </a>
       </div>
     </div>
 
@@ -66,12 +66,12 @@
             {{ status.unresponsive }} Unresponsive
           </div>
         </div>
-        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=unresponsive">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
           </span>
-        </a> -->
+        </a>
       </div>
     </div>
 
@@ -86,12 +86,12 @@
             {{ status.offline }} Offline
           </div>
         </div>
-        <!-- <a class="card-footer text-white clearfix small z-1" href="#">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=offline">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
           </span>
-        </a> -->
+        </a>
       </div>
     </div>
 
