--- a/templates/site/replicas.html
+++ b/templates/site/replicas.html
@@ -79,7 +79,7 @@
                 {% health replica %}
               </td>
               <td class="text-center">{{ replica.precedence }}</td>
-              <td>{{ replica.hostname }}</td>
+              <td>{{ replica.name }}</td>
               <td><code>{{ replica.ip_address }}:{{ replica.port }}</code></td>
               <td>{{ replica.location.location }}</td>
               <td>{{ replica.last_seen|naturaltime }}</td>
