--- a/templates/site/overview.html
+++ b/templates/site/overview.html
@@ -26,7 +26,7 @@
             {{ status.active }} Active
           </div>
         </div>
-        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?active=true">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replica-list' %}?active=true">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
@@ -46,7 +46,7 @@
             {{ status.online }} Online
           </div>
         </div>
-        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=online">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replica-list' %}?health=online">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
@@ -66,7 +66,7 @@
             {{ status.unresponsive }} Unresponsive
           </div>
         </div>
-        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=unresponsive">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replica-list' %}?health=unresponsive">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
@@ -86,7 +86,7 @@
             {{ status.offline }} Offline
           </div>
         </div>
-        <a class="card-footer text-white clearfix small z-1" href="{% url 'replicas' %}?health=offline">
+        <a class="card-footer text-white clearfix small z-1" href="{% url 'replica-list' %}?health=offline">
           <span class="float-left">View Details</span>
           <span class="float-right">
             <i class="fa fa-angle-right"></i>
@@ -124,6 +124,6 @@
   <!-- google maps javascript -->
   <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
   <script async defer src="//maps.google.com/maps/api/js?key={{ google_maps_api }}&callback=initMap"></script>
-  <script src="{% static 'js/geo.js' %}"
+  <script src="{% static 'js/geo.js' %}"></script>
 
 {% endblock %}
