--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -21,6 +21,12 @@
           <span class="nav-link-text">Replicas</span>
         </a>
       </li>
+      <li class="nav-item{% if dashboard == "geonet" %} active{% endif %}" data-toggle="tooltip" data-placement="right" title="Link">
+        <a class="nav-link" href="{% url 'geonet' %}">
+          <i class="fa fa-fw fa-globe"></i>
+          <span class="nav-link-text">GeoNet</span>
+        </a>
+      </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
         <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
           <i class="fa fa-fw fa-cog"></i>
