--- a/templates/snippets/light.html
+++ b/templates/snippets/light.html
@@ -1,3 +1,3 @@
 <span class="{{ class }}" title="{{ title }}">
-  <i class="fa fa-circle"></i>
+  <i class="fa fa-circle"></i>{% if label %}&nbsp;{{ label }}{% endif %}
 </span>
